--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "website-info",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://TRINHHOANGANH.github.io/web-photonx/",
   "dependencies": {
     "@ant-design/compatible": "^5.1.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -27,7 +28,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.8",
+    "gh-pages": "^6.0.0",
     "webpack": "^5.89.0"
   }
 }
